# access-config-utils

./: README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
conda/: meta.yaml
src/access/config/: __init__.py  accessom3_layout_input.py  domain_parallelisation.py  esm1p6_layout_input.py  layout_config.py  layouts.py  parallel_component.py  parallel_constraints.py  parallel_domain.py  parallel_layouts.py  parallelisation.py  parse_tree_ops.py  parser.py  parser_types.py
src/access/parsers/: __init__.py  cice5_profiling.py  config.py  fms_profiling.py  fortran_nml.py  mom6_input.py  mom_profiling.py  nuopc_config.py  payu_config_yaml.py  payujson_profiling.py  profiling.py  um_profiling.py  utils.py
tests/: test_cice5_profiling.py  test_config.py  test_constraints.py  test_domain_parallelisation.py  test_esm1p6_layout_input.py  test_fms_profiling.py  test_fortran_nml.py  test_layout_config.py  test_layouts.py  test_mom6_input.py  test_mom_profiling.py  test_nuopc_config.py  test_parallel_component.py  test_parallel_constraints.py  test_parallel_domain.py  test_parallel_layouts.py  test_parallelisation.py  test_payu_config_yaml.py  test_payujson_profiling.py  test_profiling.py  test_um_profiling.py  test_yaml_config.py
